[metadata]
name = adaptive_stratification
version = 1.0
author = Krumscheid, Pettersson
author_email = max@mustermann.de
maintainer = Fangning Yuan
maintainer_email = mike.yuan@rwth-aachen.de
description = Adaptive Stratification library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.rwth-aachen.de/krumscheid/adaptive-stratification-python
platform =
     any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    scipy
    numpy


[options.packages.find]
where = src
